# TuneIt

./: .gitignore  README.md  meson.build  meson_options.txt  ru.ximperlinux.TuneIt.json  ru.ximperlinux.TuteIt.json  tuneit.spec  tuneit_mokup.cmb  tuneit_mokup.ui
data/: meson.build  ru.ximperlinux.TuneIt.Daemon.conf  ru.ximperlinux.TuneIt.Daemon.policy  ru.ximperlinux.TuneIt.desktop.in  ru.ximperlinux.TuneIt.gschema.xml  ru.ximperlinux.TuneIt.metainfo.xml.in  ru.ximperlinux.TuneIt.service.in  ru.ximperlinux.TuteIt.desktop.in  ru.ximperlinux.TuteIt.gschema.xml  ru.ximperlinux.TuteIt.metainfo.xml.in  ru.ximperlinux.TuteIt.service.in  tuneit-daemon.service
data/icons/: meson.build
modules/: exampleplug.yml  meson.build
modules/example_module/: example_module.yml
modules/exampleplug/: exampleplug.yml
po/: LINGUAS  POTFILES.in  meson.build  ru_RU.po
src/: about.py  config.py  daemon.in  daemon.py  find_blp.sh  main.py  meson.build  tuneit.gresource.xml  tuneit.in  utils.py  window..cmb  window..ui  window.blp  window.py  window.ui
src/settings/: __init__.py  backends.py  daemon_client.py  main.py  module.py  page.py  searcher.py
src/settings/backends/: __init__.py  base.py  binary.py  file.py  gsettings.py
src/settings/sections/: __init__.py  base.py  base_strategy.py  classic.py  custom.py
src/settings/setting/: base.py  custom_setting.py  setting.py
src/settings/setting/widgets/: AvatarWidget.py  BaseWidget.py  BooleanWidget.py  ButtonWidget.py  ChoiceWidget.py  DualListWidget.py  EntryWidget.py  FileChooser.py  InfoDictWidget.py  InfoLabelWidget.py  NumStepper.py  RadioChoiceWidget.py  __init__.py
src/settings/tools/: gvariant.py  yml_tools.py
src/settings/widgets/: BaseWidget.py  BooleanWidget.py  ChoiceWidget.py  EntryWidget.py  FileChooser.py  NumStepper.py  RadioChoiceWidget.py  __init__.py  deps_alert_dialog.blp  deps_alert_dialog.py  error_dialog.blp  error_dialog.py  panel_row.blp  panel_row.py  service_dialog.py
